# setscraper

./: README.md  docker-compose.yml  pyproject.toml  setscraper.py
data/database/init/: 01_create_tables.sql
data_pipeline/: .gitignore  __init__.py  csv_merge_clean.py  csv_to_sql.py  episode_discovery.py  episode_discovery_benchmarks.json  episodes.py  testscrape.ipynb  track_scraping_benchmarks.json  tracks.py
