[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "setscraper"
version = "0.1.0"
description = "A web scraper for BBC 6 Music episodes"
requires-python = ">=3.12.7,<3.13"

dependencies = [
    "selenium>=4.15.0",
    "pandas>=2.0.0",
    "ipykernel",
    "psycopg2-binary>=2.9.0",
    "sqlalchemy>=2.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["data_pipeline"] 